# Perceptron

./: CMakeLists.txt  NeuralNetwork.cpp  Perceptron.hpp  README.md  Training.hpp  header.hpp
